fixed menu alignment issue

--- a/public/css/master.less
+++ b/public/css/master.less
@@ -62,6 +62,19 @@ h2.city {
 	margin-top: 30px;
 }
 
+.menu-col {
+	float: left;
+}
+
+.menu-cell {
+	height: 42px;
+}
+
+.menu-col.menu-links {
+	margin-left: 20px;
+	.heading;
+}
+
 .menu a, .menu a:hover, .menu a:focus {
 	color: @black;
 }
@@ -74,16 +87,6 @@ h2.city {
 .menu i {
 	display: block;
 	margin-top: 20px;
-}
-
-.icons {
-	float: left;
-	margin-right: 20px;
-}
-
-.menu-links h3 {
-	float: left;
-	.heading;
 }
 
 .icons a, .icons a:hover, .icons a:focus {
